--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Dist-Zilla-SHARYANTO-OurPkgVersion
 
+0.02     2014-04-01 (SHARYANTO)
+
+         - No functional changes.
+
+         - Add See Also POD section.
+
+
 0.01     2014-04-01 (SHARYANTO)
 
          - First release.
